updated on Day 2

--- a/soti-company-website-v1/index.html
+++ b/soti-company-website-v1/index.html
@@ -6,19 +6,21 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Welcome to SOTI Website!</title>
+  <title>Welcome to SOTI Website!!!!!!!!</title>
 </head>
 
 <body>
   <header>
-    <img src="./assets/images/SOTI-Logo.png" alt="SOTI Logo" width="160">
+    <a href="./index.html">
+      <img src="./assets/images/SOTI-Logo.png" alt="SOTI Logo" width="160">
+    </a>
     <nav id="primaryMenu">
       <ul>
-        <li><a href="">Home</a></li>
-        <li><a href="">Products</a></li>
-        <li><a href="">Services</a></li>
-        <li><a href="">About</a></li>
-        <li><a href="">Contact Us</a></li>
+        <li><a href="./index.html">Home</a></li>
+        <li><a href="./products.html">Products</a></li>
+        <li><a href="./services.html">Services</a></li>
+        <li><a href="./about.html">About</a></li>
+        <li><a href="./contact.html">Contact Us</a></li>
       </ul>
     </nav>
     <hr>
@@ -43,16 +45,16 @@
     <section>
       <h2>What SOTI Can Do For Your Business</h2>
       <span>
-        <img src="./assets/images/book-svgrepo-com.svg" >
+        <img src="./assets/icons/book-svgrepo-com.svg" >
       </span>
       <span>
-        <img src="./assets/images/car-svgrepo-com.svg">
+        <img src="./assets/icons/car-svgrepo-com.svg">
       </span>
       <span>
-        <img src="./assets/images/cup-svgrepo-com.svg">
+        <img src="./assets/icons/cup-svgrepo-com.svg">
       </span>
       <span>
-        <img src="./assets/images/fire-svgrepo-com.svg">
+        <img src="./assets/icons/fire-svgrepo-com.svg">
       </span>
     </section>
 
@@ -71,13 +73,22 @@
       <button>Request a Demo</button>
       <button>30 Day Free Trial</button> 
       <br><br>
-      <a href="">Or Contact Us</a>
+      <a href="./contact.html">Or Contact Us</a>
     </section>
 
   </main>
 
   <footer>
     <hr>
+    <nav id="secMenu">
+      <ul>
+        <li><a href="./index.html">Home</a></li>
+        <li><a href="./products.html">Products</a></li>
+        <li><a href="./services.html">Services</a></li>
+        <li><a href="./about.html">About</a></li>
+        <li><a href="./contact.html">Contact Us</a></li>
+      </ul>
+    </nav>
     <p>© 1995-2021 SOTI Inc. All Rights Reserved.</p>
   </footer>
 
