--- a/soti-company-website-v2/about.html
+++ b/soti-company-website-v2/about.html
@@ -7,13 +7,17 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Welcome to SOTI Website!</title>
+
+   <!-- Loading external styles -->
+   <link rel="stylesheet" href="./styles/main.css">
+  
 </head>
 
 <body>
   <header>
-    <a href="./index.html">
-      <img src="./assets/images/SOTI-Logo.png" alt="SOTI Logo" width="160">
-    </a>
+    <div id="logoBox">
+      <a href="./index.html"><img src="./assets/images/SOTI-Logo.png" alt="SOTI Logo" width="160"></a>
+    </div>
     <nav id="primaryMenu">
       <ul>
         <li><a href="./index.html">Home</a></li>
@@ -23,7 +27,6 @@
         <li><a href="./contact.html">Contact Us</a></li>
       </ul>
     </nav>
-    <hr>
   </header>
 
   <main>
@@ -40,7 +43,7 @@
           SOTI helps businesses take mobility to endless possibilities.
         </p>
       </div>
-      <img src="./assets/images/aboutus-img.png" width="350">
+      <img src="./assets/images/aboutus-img.png" width="350" class="aboutUsImg">
     </section>
 
     <section>
